--- a/email-example.html
+++ b/email-example.html
@@ -48,8 +48,8 @@
                               </tbody>
                             </table>
                           </td>
-                          <td style="padding: 0px;"><a href="mailto:ben@storj.io" style="text-decoration: none; color: rgb(0, 0, 0); font-size: 12px;" class="sc-gipzik iyhjGb">
-                              ben@storj.io</a></td>
+                          <td style="padding: 0px;"><a href="mailto:@storj.io" style="text-decoration: none; color: rgb(0, 0, 0); font-size: 12px;" class="sc-gipzik iyhjGb">
+                              myemail@storj.io</a></td>
                         </tr>
                         <tr style="vertical-align: middle; middle; horizontal-align: middle;">
                           <td style="vertical-align: middle;" width="10">
